NetBSD Problem Report #39017

From www@NetBSD.org  Sun Jun 22 12:15:57 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 8A76063BC6A
	for <gnats-bugs@gnats.netbsd.org>; Sun, 22 Jun 2008 12:15:57 +0000 (UTC)
Message-Id: <20080622121557.46D7163BBCF@narn.NetBSD.org>
Date: Sun, 22 Jun 2008 12:15:57 +0000 (UTC)
From: g.mcgarry@ieee.org
Reply-To: g.mcgarry@ieee.org
To: gnats-bugs@NetBSD.org
Subject: initialization of objects with static storage duration by compound literals
X-Send-Pr-Version: www-1.0

>Number:         39017
>Category:       kern
>Synopsis:       initialization of objects with static storage duration by compound literals
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jun 22 12:20:00 +0000 2008
>Closed-Date:    Wed Jul 23 00:14:16 +0000 2008
>Last-Modified:  Wed Jul 23 00:14:16 +0000 2008
>Originator:     Gregory McGarry
>Release:        -current
>Organization:
>Environment:
>Description:
According to http://gcc.gnu.org/onlinedocs/gcc-3.3.1/gcc/Compound-Literals.html, ISO C99 does not permit initialization of objects with static storage duration by compound literals.

However gcc has an extension which permits this.

umidi_quirks.h relies on this extension.

>How-To-Repeat:

>Fix:
This is how binary blobs have been included in static storage for ~25 years:

Index: umidi_quirks.c
===================================================================
RCS file: /cvsroot/src/sys/dev/usb/umidi_quirks.c,v
retrieving revision 1.15
diff -u -r1.15 umidi_quirks.c
--- umidi_quirks.c	28 Apr 2008 20:24:00 -0000	1.15
+++ umidi_quirks.c	22 Jun 2008 12:10:24 -0000
@@ -515,8 +515,8 @@
 };
 UMQ_DEF(MIDIMAN, MIDIMAN_MIDISPORT2X4, ANYIFACE) = {
 	UMQ_FIXED_EP_REG(MIDIMAN, MIDIMAN_MIDISPORT2X4, ANYIFACE),
-	UMQ_CN_FIXED_REG(0, 2, 1, 3, 0, 1),
-	UMQ_MD_FIXED_REG(0, 0, 2, 1, 1, -1, 3, -1),
+	UMQ_CN_FIXED_REG("\0\2\1\3\0\1"),
+	UMQ_MD_FIXED_REG("\0\0\2\1\1\ff\3\ff"),
 	UMQ_TYPE(MIDIMAN_GARBLE),
 	UMQ_TERMINATOR
 };
Index: umidi_quirks.h
===================================================================
RCS file: /cvsroot/src/sys/dev/usb/umidi_quirks.h,v
retrieving revision 1.7
diff -u -r1.7 umidi_quirks.h
--- umidi_quirks.h	28 Apr 2008 20:24:00 -0000	1.7
+++ umidi_quirks.h	22 Jun 2008 12:10:25 -0000
@@ -108,13 +108,9 @@
  * in the same jack order implied by the FIXED_EP_DEF. Each value becomes
  * the cable number of the corresponding jack.
  */
-#if __STDC_VERSION__ >= 199901L
-#define UMQ_CN_FIXED_REG(...)						\
-{ .type=UMQ_TYPE_CN_FIXED, .data=(unsigned char[]){__VA_ARGS__} }
-#else /* assume gcc 2.95.3 */
-#define UMQ_CN_FIXED_REG(cns...)					\
-{ .type=UMQ_TYPE_CN_FIXED, .data=(unsigned char[]){cns} }
-#endif
+
+#define UMQ_CN_FIXED_REG(x)						\
+{ .type=UMQ_TYPE_CN_FIXED, .data=x }

 /*
  * quirk - fixed mididev assignment. Supply pairs of numbers out, in, as
@@ -125,13 +121,8 @@
  * Either out or in can be -1 to bind no out jack or in jack, respectively,
  * to the corresponding mididev.
  */
-#if __STDC_VERSION__ >= 199901L
-#define UMQ_MD_FIXED_REG(...)						\
-{ .type=UMQ_TYPE_MD_FIXED, .data=(unsigned char[]){__VA_ARGS__} }
-#else /* assume gcc 2.95.3 */
-#define UMQ_MD_FIXED_REG(mds...)					\
-{ .type=UMQ_TYPE_MD_FIXED, .data=(unsigned char[]){mds} }
-#endif
+#define UMQ_MD_FIXED_REG(x)						\
+{ .type=UMQ_TYPE_MD_FIXED, .data=x }

 /*
  * generic boolean quirk, no data


>Release-Note:

>Audit-Trail:
From: Gregory McGarry <gmcgarry@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39017 CVS commit: src/sys/dev/usb
Date: Tue,  8 Jul 2008 11:34:43 +0000 (UTC)

 Module Name:	src
 Committed By:	gmcgarry
 Date:		Tue Jul  8 11:34:43 UTC 2008

 Modified Files:
 	src/sys/dev/usb: umidi.c umidi_quirks.c umidi_quirks.h umidivar.h

 Log Message:
 Constify most umidi-quirk data.  Addresses PR#39017.


 To generate a diff of this commit:
 cvs rdiff -r1.37 -r1.38 src/sys/dev/usb/umidi.c
 cvs rdiff -r1.15 -r1.16 src/sys/dev/usb/umidi_quirks.c
 cvs rdiff -r1.7 -r1.8 src/sys/dev/usb/umidi_quirks.h
 cvs rdiff -r1.12 -r1.13 src/sys/dev/usb/umidivar.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: gmcgarry@NetBSD.org
State-Changed-When: Wed, 23 Jul 2008 00:14:16 +0000
State-Changed-Why:
fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.