Constify most umidi-quirk data.  Addresses PR#39017.